--- a/StreamWriter/StreamWriter.vcxproj
+++ b/StreamWriter/StreamWriter.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="FileStreamWriter.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StreamManager.h" />
+    <ClInclude Include="StreamReader.h" />
     <ClInclude Include="StreamWriter.h" />
     <ClInclude Include="StreamWriterWrapper.h" />
     <ClInclude Include="targetver.h" />
