--- a/StreamWriter/StreamWriter.vcxproj.filters
+++ b/StreamWriter/StreamWriter.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="StreamWriterWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StreamReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
